This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2001-04-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Released as 0.2.4
	Added debian and msvc6 subdirs to autoconf configuration: they were
	missing from the dist target.
	
2001-04-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Made Category subclassable. 
	Added FixedContextCategory class.
	
2001-04-12 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Merged Marcel Harkema's patch for Debian package support.

2001-04-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Added StringQueueAppender class.
	Separated API docs from devel RPM, into a doc RPM.
	
2001-04-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Rerelease as 0.2.3b
	Fixed bugs:
	#415056 Win32: log4cpp project file broken
	#415059 Win32: problem with 'using namespace std'
	
2001-04-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.3
	Fixed and resolved Bugs:
	#411711 missing Clock.hh
	#411902 invalid AppenderMap iterator
	#412008 memory leak in OstringStream::str()
	#412232 _append problem
	#414958 printf style logging kaputt
	
2001-04-06 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Added class Filter, with which Appenders can filter out LoggingEvents
	Added class AppenderSkeleton, base class for Appender implementations
	Modified the Layout interface: it now returns a std::string instead of
	a char*.

2001-03-?? Cedric Le Goater <cedric@legoater.com>
	Cleanup of Hints and StreamUtil to OstringStream.
	
2001-03-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Added LayoutAppender. Changed Layout ownership for Appenders: they
	now own their Appender.

2001-03-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Moved to new iostreams.
	
2001-03-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	Release 0.2.2
	Added doc-dist make target
	Added testCategory to tests
	
2001-02-25 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>