@@ -1,1 +1,3 @@
 SUBDIRS = log4cpp testCategory testNDC
+
+EXTRA_DIST = msvc6.dsw
