@@ -1,5 +1,9 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2001-04-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	Now also added the files in debian and msvc6 to EXTRA_DIST, so they 
+	finally get into the dist tar ball. Sigh.
+	
 2001-04-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	Released as 0.2.4
 	Added debian and msvc6 subdirs to autoconf configuration: they were
